Updates firebase hosting

--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,11 @@
 {
-  "firebase": "ember-signature-pad",
-  "public": "dist",
-  "ignore": [
-    "firebase.json",
-    "**/.*",
-    "**/node_modules/**"
-  ]
+  "hosting": {
+    "public": "dist",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
